# pastes

./: .gitignore  Main.hs  README.md  docker-compose.yml  pastebin.cabal  relatorio.md  run.sh
backend/: Main.hs  pastebin.cabal  pastes-api.cabal
backend/docker/: Dockerfile  entrypoint.sh
frontend/: elm.json  index.html  main.css  main.js
frontend/docker/: Dockerfile
frontend/src/: key.elm  main.js
frontend/src/pastes/: Main.elm  Model.elm  Msg.elm  View.elm
src/: App.elm  index.html  key.elm  main.js
