name:          pastebin 
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          pastebin 
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , containers
                  , http-types
                  , wai-cors
                  , aeson
                  , mongoDB
